fixed overflow in my list

--- a/style.css
+++ b/style.css
@@ -106,17 +106,16 @@ ul {
     align-items: center;
     display: flex;
     justify-content: space-between;
-
     width: 100%;
 
     padding: 1rem;
-
 }
 
 .todo-wrapper {
     display: flex;
     align-items: center;
     padding: 0 1rem;
+    overflow-wrap: anywhere;
 }
 
 .todo-wrapper.hide {
